@@ -10,6 +10,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
 import org.springframework.web.client.RestClientException;
 
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -18,7 +19,7 @@ public class DoctorScheduleSlotClient {
     private static final Logger log = LoggerFactory.getLogger(DoctorScheduleSlotClient.class);
 
     private static final ParameterizedTypeReference<List<AuthScheduleSlotRow>> SLOT_LIST =
-            new ParameterizedTypeReference<>() {};
+            new ParameterizedTypeReference<List<AuthScheduleSlotRow>>() {};
 
     private final RestClient authRestClient;
     private final RestClient authFallbackRestClient;
@@ -55,11 +56,11 @@ public class DoctorScheduleSlotClient {
                             ex.getMessage(),
                             fallbackEx.getMessage()
                     );
-                    return List.of();
+                    return Collections.emptyList();
                 }
             }
             log.warn("Could not load doctor_schedule_slots for doctor {} on {}: {}", doctorId, isoDate, ex.getMessage());
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
@@ -68,14 +69,14 @@ public class DoctorScheduleSlotClient {
                 .uri("/api/schedule/doctor/{doctorId}/public-slots?date={date}", doctorId, isoDate)
                 .retrieve()
                 .body(SLOT_LIST);
-        return body != null ? body : List.of();
+        return body != null ? body : Collections.emptyList();
     }
 
     private boolean shouldTryFallback() {
-        if (authFallbackBaseUrl == null || authFallbackBaseUrl.isBlank()) {
+        if (authFallbackBaseUrl == null || authFallbackBaseUrl.trim().isEmpty()) {
             return false;
         }
-        if (authBaseUrl == null || authBaseUrl.isBlank()) {
+        if (authBaseUrl == null || authBaseUrl.trim().isEmpty()) {
             return true;
         }
         return !authBaseUrl.trim().equalsIgnoreCase(authFallbackBaseUrl.trim());
